<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_progress"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_progress"
            />
        <item
            android:id="@+id/nav_category"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/nav_category"
            />
        <item
            android:id="@+id/nav_calender_activity"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_calendar"
            />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_tasks"
            />

        <item
            android:id="@+id/nav_platforms"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_platforms"
            />
    </group>

    <item
        android:title="@string/nav_support"
        >
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"
                />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"
                />
        </menu>
    </item>

</menu>